--- a/sileodepictions/DLEasy.json
+++ b/sileodepictions/DLEasy.json
@@ -12,7 +12,7 @@
 "title":"Mô tả & Giới thiệu"
 },
 {
-"markdown":"DLEasy\n\n- Cho phép tải xuống hình ảnh và video từ các nền tảng Ứng dụng mạng xã hội.!\n\n- Facebook, Instagram, Messenger, Reddit, Tik Tok, Tumblr, Tweetbot, Twitter, VK, WhatsApp, YouTube)\n\n- Nhấn và giữ để lưu video và hình ảnh.\n\n- Tải xuống video và hình ảnh từ tất cả các ứng dụng có sẵn trong DLEasy.\n\n- Bạn có thể biết các phiên bản tương thích bên trong cài đặt chỉnh sửa\n\n- Nhập video và âm thanh từ YouTube vào Music.app.\n\n- Lưu phương tiện trong một album tùy chỉnh là DLEasy\n\n- Bạn có thể thu nhỏ giao diện tải xuống và phần tải xuống sẽ ở chế độ nền. \n\nㅤ\n\n",
+"markdown":"DLEasy\n\n- Cho phép tải xuống hình ảnh và video từ các nền tảng Ứng dụng mạng xã hội.!\n\n- Facebook, Instagram, Messenger, Reddit, Tik Tok, Tumblr, Tweetbot, Twitter, VK, WhatsApp, YouTube)\n\n- Nhấn và giữ để lưu video và hình ảnh.\n\n- Tải xuống video và hình ảnh từ tất cả các ứng dụng có sẵn trong DLEasy.\n\n- Có thể xem các phiên bản ứng dụng tương thích bên trong cài đặt\n\n- Nhập video và âm thanh từ YouTube vào Music.app.\n\n- Lưu phương tiện trong một album tùy chỉnh là DLEasy\n\n- Bạn có thể thu nhỏ giao diện tải xuống và phần tải xuống sẽ ở chế độ nền. \n\nㅤ\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
@@ -40,7 +40,7 @@
 "title":"Tham gia nhóm"
 },
 {
-"markdown":"[**Fanpage Facebook**](https://t.me/jailbreaktrolliossupport/1) - 24/7\n\nㅤ\n\n",
+"markdown":"[**FTelegram**](https://t.me/jailbreaktrolliossupport/1) - 24/7\n\nㅤ\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
