--- a/sileodepictions/DLEasy.json
+++ b/sileodepictions/DLEasy.json
@@ -40,7 +40,7 @@
 "title":"Tham gia nhóm"
 },
 {
-"markdown":"[**FTelegram**](https://t.me/jailbreaktrolliossupport/1) - 24/7\n\nㅤ\n\n",
+"markdown":"[**Telegram**](https://t.me/jailbreaktrolliossupport/1) - 24/7\n\nㅤ\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
@@ -75,7 +75,7 @@
 {
 "class":"DepictionTableTextView",
 "title":"Khả năng tương thích",
-"text":"iOS 12 đến 17.0"
+"text":"iOS 12.0-16.6.1"
 },
 {
 "class":"DepictionLabelView",
