--- a/sileodepictions/DLEasy.json
+++ b/sileodepictions/DLEasy.json
@@ -56,7 +56,7 @@
 "title":"Nhà phát triển",
 "text":"AhmedBafkir"
 },
-{ "class":"DepictionTableTextView", "title":"Phiên bản", "text":"2.14.7" },
+{ "class":"DepictionTableTextView", "title":"Phiên bản", "text":"2.14.8" },
 {
 "class":"DepictionTableTextView",
 "title":"Thể loại",
@@ -65,7 +65,7 @@
 {
 "class":"DepictionTableTextView",
 "title":"Ngày tải lên",
-"text":"9/5/2025"
+"text":"10/5/2025"
 },
 {
 "class":"DepictionTableTextView",
@@ -92,7 +92,7 @@
 "views":[
 {
 "class":"DepictionMarkdownView",
-"markdown":"### Phiên bản 2.14.7\n\n- Cập nhật danh sách các phiên bản ứng dụng mới tương thích hơn"
+"markdown":"### Phiên bản 2.14.8\n\n- Sửa lỗi văng ứng dụng khi tải xuống\n\n- Cập nhật danh sách các phiên bản ứng dụng mới tương thích hơn"
 },
 {
 "class":"DepictionLabelView",
