--- a/sileodepictions/DLEasy.json
+++ b/sileodepictions/DLEasy.json
@@ -21,11 +21,11 @@
 "class":"DepictionScreenshotsView",
 "screenshots":[
 {
-"url":"https://jtisvn.github.io/infodeb/DLEasy/Screenshots/1.jpg",
+"url":"https://jtisvn.github.io/infodeb/DLEasy/Screenshots/1.png",
 "accessibilityText":"Screenshot"
 },
 {
-"url":"https://jtisvn.github.io/infodeb/DLEasy/Screenshots/2.jpg",
+"url":"https://jtisvn.github.io/infodeb/DLEasy/Screenshots/2.png",
 "accessibilityText":"Screenshot"
 }
 ],
