--- a/sileodepictions/SettingsWiFiPassword.json
+++ b/sileodepictions/SettingsWiFiPassword.json
@@ -12,7 +12,7 @@
 "title":"Mô tả & Giới thiệu"
 },
 {
-"markdown":"SettingsWiFiPassword\n\n- Cho phép sao chép mặt khẩu Wifi trong cài đặt ứng dụng trên thiết bị iOS 15 trở xuống.\n\n- t\n\n",
+"markdown":"SettingsWiFiPassword\n\n- Cho phép sao chép mặt khẩu Wifi trong cài đặt ứng dụng trên thiết bị iOS 15 trở xuống.t\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
