--- a/sileodepictions/AppLecard.json
+++ b/sileodepictions/AppLecard.json
@@ -12,7 +12,7 @@
 "title":"Mô tả & Giới thiệu"
 },
 {
-"markdown":"AppLecard.\n\n Hướng dẫn sử dụng:\n\n- Vuốt từ cạnh trái/phải màn hình, cách đáy ~2.5cm.\n\n- Kéo nhanh đĩa sang cạnh đối diện.\n\n Thêm ứng dụng:\n\n- Trong cài đặt, nhấn biểu tượng ngôi sao để chọn app.Có thể mở dạng cửa sổ nổi hoặc thu nhỏ thành icon tròn.\n\n Cửa sổ nổi:\n\n- Vuốt lên thanh dưới: đóng cửa sổ.\n\n-Vuốt xuống: chuyển toàn màn hình.\n\n- Nhấn nhanh: thu nhỏ thành icon tròn.\n\n- Kéo cạnh: di chuyển. Giữ kéo góc đổi kích thước.\n\n Chế độ icon tròn:\n\n- Nhấn nhanh: mở lại cửa sổ.\n\n- Nhấn giữ: gỡ khỏi màn hình.\n\n Tính năng thông minh:\n\n- Mở cửa sổ theo thông báo.\n\n- Tự điều chỉnh kích thước.\n\n- Hỗ trợ xoay màn hình.\n\n- Không che bàn phím.\n\n- Và nhiều tính năng khác...\n\n",
+"markdown":"AppLecard.\n\n Hướng dẫn sử dụng:\n\n- Vuốt từ cạnh trái/phải màn hình, cách đáy ~2.5cm.\n\n- Kéo nhanh đĩa sang cạnh đối diện.\n\n Thêm ứng dụng:\n\n- Trong cài đặt, nhấn biểu tượng ngôi sao để chọn app.\n\n- Có thể mở dạng cửa sổ nổi hoặc thu nhỏ thành icon tròn.\n\n Mở ứng dụng:\n\n- Vuốt từ cạnh vào giữa, rê ngón tay đến app để mở.\n\n- Trong chế độ cài đặt Xoay nhanh thay đổi kích cỡ đĩa & số app.\n\n- Xoay bình thường sắp xếp lại vị trí app.\n\n Cửa sổ nổi:\n\n- Vuốt lên thanh dưới: đóng cửa sổ.\n\n- Vuốt xuống chuyển toàn màn hình.\n\n- Nhấn nhanh thu nhỏ thành icon tròn.\n\n- Kéo cạnh: di chuyển. Giữ kéo góc đổi kích thước.\n\n Chế độ icon tròn:\n\n- Nhấn nhanh: mở lại cửa sổ.\n\n- Nhấn giữ: gỡ khỏi màn hình.\n\n Tính năng thông minh:\n\n- Mở cửa sổ theo thông báo.\n\n- Tự điều chỉnh kích thước.\n\n- Hỗ trợ xoay màn hình.\n\n- Không che bàn phím.\n\n- Và nhiều tính năng khác...\n\n",
 "useSpacing":"true",
 "class":"DepictionMarkdownView"
 },
